@@ -1,3 +1,8 @@
+2016/11/15:
+Fix in --only-preprocess-for-ocamlyacc mode: avoid printing newline characters
+inside a %type declaration, as this is forbidden by ocamlyacc. (Reported by
+Kenji Maillard.)
+
 2016/09/01:
 New command line switch --only-preprocess-for-ocamlyacc, supposed to print the
 grammar in a form that ocamlyacc can accept. As of now, this feature is
